2002-06-04  John Levon  <moz@compsoc.man.ac.uk>

	* pp/Makefile.in:
	* pp/op_to_source.cpp:
	* pp/opp_symbol.cpp:
	* pp/demangle_symbol.h:
	* pp/demangle_symbol.cpp: move this ...
 
	* libutil++/Makefile.in:
	* libutil++/demangle_symbol.h:
	* libutil++/demangle_symbol.cpp: ... to here

2002-06-04  John Levon  <moz@compsoc.man.ac.uk>

	* make.common.in: 
	* make.deps: split out CXXINCLUDES
 
	* Makefile.in:
	* configure.in:	
	* libop++/Makefile.in:
	* libop++/op_print_event.h:
	* libop++/op_print_event.cpp:
	* pp/Makefile.in:
	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp:
	* pp/samples_file.cpp: start libop++ library,
	  move op_print_event there

	* pp/op_bfd.h:
	* pp/op_bfd.cpp: 
	* pp/op_time.cpp: 
	* pp/op_to_source.cpp: 
	* pp/oprofpp.cpp: 
	* pp/samples_file.h:
	* pp/samples_file.cpp: remove all knowledge of
	  is_kernel from op_bfd, some minor cleanups
 
2002-06-04  John Levon  <moz@compsoc.man.ac.uk>

	* pp/op_bfd.h:
	* pp/op_bfd.cpp:
	* pp/samples_container.cpp: kill another char*
 
	* pp/outsymbflag.h: reduce fake dependencies with
	  new file, little cleanup

	* pp/Makefile.in:
	* pp/demangle_symbol.cpp:
	* pp/op_merge.cpp:
	* pp/op_time.cpp:
	* pp/op_time_options.h:
	* pp/op_time_options.cpp:
	* pp/op_to_source.cpp:
	* pp/op_to_source_options.h:
	* pp/op_to_source_options.cpp:
	* pp/opp_symbol.h:
	* pp/oprofpp.h:
	* pp/oprofpp.cpp:
	* pp/oprofpp_options.h:
	* pp/oprofpp_options.cpp:
	* pp/oprofpp_util.cpp: Some more refactoring. More work
	  needed...
 
2002-06-01  John Levon  <moz@compsoc.man.ac.uk>

	* doc/Makefile.in: fix DOCDIR (from Al Stone)
 
2002-06-01  John Levon  <moz@compsoc.man.ac.uk>

	* libutil++/file_manip.h:
	* libutil++/file_manip.cpp: clarify API
 
	* pp/oprofpp.cpp: fix bug 563324 resulting from above

2002-06-01  John Levon  <moz@compsoc.man.ac.uk>

	* make.common.in: make --with-extra-lib work again

	* dae/opd_image.h:
	* dae/opd_image.c: comment typos

	* doc/srcdoc/Doxyfile: generate PNG not GIF 
 