@@ -13,11 +13,8 @@
 #include "oprofpp.h"
 #include "opp_symbol.h"
  
-#include "verbose_ostream.h"
- 
 using std::string;
 using std::vector;
-using std::ostream;
 using namespace options;
  
 namespace options {
@@ -34,13 +31,12 @@ namespace options {
 	string samplefile;
 	string imagefile;
 	bool demangle;
+	bool verbose;
 	vector<string> exclude_symbols;
 };
  
 namespace {
  
-bool verbose;
-
 string output_format;
  
 option options_array[] = {
@@ -58,12 +54,10 @@ option options_array[] = {
 	option(options::show_shared_libs, "show-shared-libs", 'k', "show details for shared libraries"),
 	option(options::list_all_symbols_details, "list-all-symbols-details", 'L', "list samples for all symbols"),
 	option(output_format, "output-format", 't', "choose the output format", "output-format strings"),
-	option(verbose, "verbose", 'V', "verbose output"),
+	option(options::verbose, "verbose", 'V', "verbose output"),
 };
  
 } // namespace anon
- 
-verbose_ostream cverb(verbose);
  
 string const get_options(int argc, char const **argv)
 {
